custom_domain/3-acme-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cert-manager-http01
  namespace: model-serving
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: demo.vuxlinh.com
    http:
      paths:
      - path: /.well-known/acme-challenge/
        pathType: Prefix
        backend:
          service:
            name: cm-acme-http-solver-4xfmh # Replace with correct service name
            port:
              number: 8089
